--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="setup-user">
         <div class="upload">
           <img class="setup-user-pic" src="./img/user-1.jpg"/>
-          <input type="file" name="avatar">
+          <!-- <input type="file" name="avatar"> -->
         </div>
         <label>
           <input type="text" name="username" minlength="2"
@@ -92,7 +92,8 @@
 
 
     <div class="setup-artifacts-shop">
-      <div class="setup-artifacts-cell"><img src="img/icon-star.png" alt="Star" width="65" height="50" draggable="true">
+      <div class="setup-artifacts-cell">
+        <img src="img/icon-star.png" alt="Star" width="65" height="50" draggable="true">
       </div>
       <div class="setup-artifacts-cell"></div>
       <div class="setup-artifacts-cell"></div>
@@ -199,6 +200,7 @@
   };
 </script>
 <script src="js/setup.js"></script>
+<script src="js/dialog.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
